--- a/CMake/Config.cmake.in
+++ b/CMake/Config.cmake.in
@@ -1,7 +1,10 @@
 @PACKAGE_INIT@
 
+file(GLOB_RECURSE cmake_libs ${CMAKE_CURRENT_LIST_DIR}/CMake/*.cmake)
+foreach (cmake_lib ${cmake_libs})
+    include(${cmake_lib})
+endforeach ()
+
 include(${CMAKE_CURRENT_LIST_DIR}/@SUB_PROJECT_NAME@Targets.cmake)
-include(${CMAKE_CURRENT_LIST_DIR}/Common.cmake)
-include(${CMAKE_CURRENT_LIST_DIR}/Target.cmake)
 
 check_required_components(@SUB_PROJECT_NAME@)
