refactor: modern cmake fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ set(CMAKE_MAP_IMPORTED_CONFIG_DEBUG "Release" CACHE STRING "" FORCE)
 set(CMAKE_MAP_IMPORTED_CONFIG_RELWITHDEBINFO "Release" CACHE STRING "" FORCE)
 set(CMAKE_MAP_IMPORTED_CONFIG_MINSIZEREL "Release" CACHE STRING "" FORCE)
 
-add_definitions(-DBUILD_EDITOR=$<BOOL:BUILD_EDITOR>)
+add_compile_definitions(BUILD_EDITOR=$<BOOL:${BUILD_EDITOR}>)
 
 include(CMake/Common.cmake)
 include(CMake/Target.cmake)
